--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -25,3 +25,5 @@ $code-color: #bf616a;
 $code-background-color: #f9f9f9;
 $table-border-color: #e5e5e5;
 $table-background-color: #f9f9f9;
+
+$channel-orange: #ffb74d;
