--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -30,8 +30,6 @@ a {
   -------------- */
 
 h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  margin-bottom: .5rem;
   font-weight: 600;
   line-height: 1.1;
   color: #333;
@@ -39,23 +37,33 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 2.1rem;
+  font-size: 1.8rem;
+  margin-top: 3.5rem;
+  margin-bottom: 1.5rem;
 }
 
 h2 {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
+  margin-top: 3.5rem;
+  margin-bottom: 1.4rem;
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.1rem;
+  margin-top: 2.0rem;
+  margin-bottom: 1.2rem;
 }
 
 h4{
-  font-size: 1.3rem;
+  font-size: 1.1rem;
+  margin-top: 1.2rem;
+  margin-bottom: 1rem;
 }
 
 h5{
   font-size: 1rem;
+  margin-top: 1rem;
+  margin-bottom: .8rem;
 }
 
 h6 {
@@ -68,6 +76,7 @@ p {
 }
 
 ul, ol, dl {
+  padding-left : 1rem;
   margin-top: 0;
   margin-bottom: 1rem;
 }
@@ -90,16 +99,18 @@ dd {
 }
 
 ul {
-  list-style: inside circle;
-  padding-left: 0;
+  // list-style: inside;
+  // padding-left: 0;
 
   li {
+    padding-left : 0;
     margin-bottom: .25rem;
   }
 
   ul,
   ol {
-    list-style: inside;
+    // list-style: inside;
+    padding-left : 0;
     margin-left: 2rem;
     margin-top: .25rem;
     margin-bottom: .5rem;
@@ -111,11 +122,13 @@ ol {
   padding-left: 0;
 
   li {
+    padding-left: 0;
     margin-bottom: .25rem;
   }
 
   ul,
   ol {
+    padding-left: 0;
     margin-left: 2rem;
     margin-top: .25rem;
     margin-bottom: .5rem;
@@ -124,14 +137,17 @@ ol {
 
 p + h1,
 p + h2,
-p + h3,
 ul + h1,
 ul + h2,
-ul + h3,
 ol + h1,
-ol + h2,
+ol + h2{
+  margin-top: 3.5rem;
+}
+
+p + h3,
+ul + h3,
 ol + h3 {
-  margin-top: 1.5rem;
+  margin-top: 2.0rem;
 }
 
 hr {
@@ -161,8 +177,8 @@ abbr[title] {
 blockquote {
   padding: 0 0 0 1.5rem;
   margin: 0 2rem 1rem 0;
-  color: #999;
-  border-left: .5rem solid #e5e5e5;
+  color: #7a7a7a;
+  border-left: .2rem solid #e5e5e5;
 
   p:last-child {
     margin-bottom: 0;
@@ -177,7 +193,7 @@ pre {
 code {
   padding: .25em .5em;
   font-size: 85%;
-  color: $code-color;
+  color: #ffa726;
   background-color: $code-background-color;
   border-radius: 3px;
 }
