--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,12 @@
 <!-- Documents about icons are here: http://fontawesome.io/icons/ -->
 <div class="footer">
 	<hr />
+
+	<div class="footer-profile">
+		<div class="profile_img">
+		</div>
+	</div>
+
 	<div class="footer-link">
 		{% if site.author.facebook %}
 		<a href="https://www.facebook.com/{{ site.author.facebook }}"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -31,5 +37,6 @@
 		{% endif %}
 
 	</div>
-	© 2016 {{ site.author.name }}. All rights reserved.
+
+	© 2017 {{ site.author.name }}.
 </div>
