--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -341,4 +341,14 @@ body {
       margin: 4px;
     }
   }
+  .footer-profile{
+    .profile_img{
+      display: inline-block;
+      width:80px;
+      height: 80px;
+  	  background : url(https://avatars3.githubusercontent.com/u/6375010?v=3&s=460) no-repeat center center;
+      background-size:contain;
+      border-radius: 40px;
+    }
+  }
 }
