--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
 <div class="footer">
 	<hr />
 
-	<div class="footer-profile">
+	<a href="/about" class="footer-profile">
 		<div class="profile_img">
 		</div>
-	</div>
+	</a>
 
 	<div class="footer-link">
 		{% if site.author.facebook %}
